tests/0042-property-set-on-num.src.err
tests/0042-property-set-on-num.src:1
ERROR: Expected ';' but got 'foo'
 | 123.foo = "value";
       ^
